[package]
name = "hashlogs"
description = "Command-line utility that hashes the part before a space on each line from stdin with blake2b keyed with an ephemeral randomly-generated key and writes to stdout"
version = "1.0.2"
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>"]
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://github.com/hsivonen/hashlogs/blob/master/README.md"
homepage = "https://github.com/hsivonen/hashlogs"
repository = "https://github.com/hsivonen/hashlogs"
keywords = ["crypto", "hash"]
categories = ["text-processing", "command-line-utilities"]

[dependencies]
blake2-rfc = "0.2.18"
rand = "0.4.2"
data-encoding = "2.1.1"

[profile.release]
lto = true
